--- a/calc.css
+++ b/calc.css
@@ -140,10 +140,14 @@ body{
 
 .buttons{
     color: rgb(245, 241, 241);
-    text-shadow: 1px 0 2px black;
+    text-shadow: 1px 1px 2px black;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    font-weight: 600;
     text-align: center;
     box-shadow: 1px 0 2px;
     font-size: 30px;
+    
 }
 
 .buttons:active{
