--- a/calc.css
+++ b/calc.css
@@ -38,7 +38,7 @@ body{
     -webkit-box-shadow: 0px 14px 22px 9px rgba(15, 15, 15, 0.35); 
     box-shadow: 0px 14px 25px 9px rgba(15, 15, 15, 0.35);
     background: rgba(76, 148, 182, 0.753);
-    border: 9px outset #4c94b6c0;
+    border: 18px outset #4c94b6c0;
     border-radius: 2%;
     top: 20%;
     left: 38%;
@@ -136,8 +136,9 @@ body{
     grid-area: btnplusmin;
     background-color:rgba(167, 236, 221, 0.984);
 }
-#display{
+.display{
     grid-area: display;
+    overflow: hidden;
     color: rgba(32, 32, 32, 0.87);
     font-size: 45px;
     display: flex;
@@ -152,5 +153,7 @@ body{
     
 }
 
-
+#fall{
+    
+}
 
