--- a/calc.css
+++ b/calc.css
@@ -66,6 +66,7 @@ body{
     text-align: center;
     box-shadow: 1px 0 2px;
     font-size: 30px;
+    cursor: pointer;
 }
 
 .buttons:active{
@@ -154,6 +155,6 @@ body{
 }
 
 #fall{
-    
+
 }
 
